--- a/index.html
+++ b/index.html
@@ -266,6 +266,11 @@
 												>Achievements</a
 											>
 										</li>
+										<li class="menu-item">
+											<a href="https://www.instagram.com/alemaari._.anashku?igsh=MTNiYzNiMzkwZA=="
+												>Travel</a
+											>
+										</li>
 									</ul>
 									<!-- menu list end -->
 								</nav>
