--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang="zxx">
 	<head>
 		<title>Suman Gangolli</title>
+		<!-- Required meta tags -->
+		<meta charset="utf-8" />
+		<title>Suhas R — Personal Portfolio</title>
+		<meta name="title" content="Suman Gangolli — Personal Portfolio" />
+		<meta
+			name="description"
+			content="Portfolio showcasing expertise in civil engineering projects, construction management, and sustainable infrastructure." />
+		<meta name="keywords" content="Suman Gangolli, Civil Engineer, Portfolio">
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+		<!-- End of meta tags -->
+
+		
 		<meta name="theme-color" content="#2B2B35" />
 
 		<link rel="stylesheet" href="css/plugins/bootstrap.min.css" />
