--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@
 									><i class="fab fa-whatsapp"></i
 								></a>
 								<a
+									href="mailto:sumanpoojary25@gmail.com"
+									><img src="img/mail.png" width="15" height="15" /></i
+								></a>
+								<a
 									href="https://www.instagram.com/suman_gangolli"
 									><i class="fab fa-instagram"></i
 								></a>
@@ -222,6 +226,9 @@
 														src="img/face-1.png"
 														class="art-banner-photo"
 														alt="Your Name" /> -->
+														<div>
+															
+														</div>
 												</div>
 												<!-- banner overlay end -->
 											</div>
